[project]
name = "{{project-name}}"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# [tool.setuptools]
# py-modules = ["cli"]

# [project.scripts]
# whisper = "cli:app"

[dependency-groups]
dev = ["mypy>=1.16.1", "ruff>=0.12.1"]

[tool.ruff]
line-length = 88
fix = true
respect-gitignore = true

[tool.ruff.lint]
ignore = ["S101"]
extend-select = [
    "E",   # pycodestyle - errors
    "W",   # pycodestyle - warnings
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "S",   # flake8-bandit
    "I",   # isort
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]


[tool.mypy]
files = ["**/*.py"]
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
allow_untyped_globals = false
allow_redefinition = false
strict_equality = true
show_column_numbers = true
show_error_context = true
pretty = true

[tool.pytest.ini_options]
pythonpath = ["."] # location of src file
